# sunairio

./: .dockerignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
tests/: test_add.py
